fix css overflow

--- a/public/stylesheets/game.styl
+++ b/public/stylesheets/game.styl
@@ -71,7 +71,6 @@ canvas
     height: 100%
     max-width 960px
     max-height 640px
-    overflow: auto
     //background: url(/media/background.png) top left no-repeat
 
 #game
